# socketbrowser

./: .gitignore  HYBRID_BROWSER_PLAN.md  LICENSE  README.md  package.json
src/: main.js  preload.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/api/: client.rs  discovery.rs  mod.rs
src-tauri/src/auth/: mod.rs
src-tauri/src/llm/: mod.rs
src-tauri/src/storage/: mod.rs
src-tauri/src/wallet/: mod.rs
src/api/: client.js  discovery.js
src/llm/: ui-generator.js
src/python/: bridge.py  llm_provider.py
src/renderer/: auth-ui.js  hybrid-renderer.js  index.html  renderer.js  style.css  wallet-ui.js
src/wallet/: solana-wallet.js
ui/: index.html
ui/css/: style.css
ui/js/: auth-ui.js  main.js  tauri-api.js  ui.js  wallet-ui.js
